--- a/staraweb/templates/index.html
+++ b/staraweb/templates/index.html
@@ -43,7 +43,7 @@
                           <li><a href="#grades">Oceny</a></li>
                           <li><a href="#terms">Semestry</a></li>
                           <li><a href="#programmes">Programy</a></li>
-                          <li><a href="#lecturers">Belfrowie</a></li>
+                          <li><a href="#lecturers">Nauczyciele</a></li>
                       </ul>
                   </li>
                 {% end %}
