--- a/staraweb/templates/index.html
+++ b/staraweb/templates/index.html
@@ -8,6 +8,7 @@
 
     <link href="{{ static_url('bower_components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ static_url('css/main.css') }}" rel="stylesheet">
+    <link rel="shortcut icon" href="{{ static_url('favicon.ico') }}">
 
     <script type="text/javascript" src="{{ static_url('require.config.js') }}"></script>
     <!-- konfiguracja require -->
