--- a/staraweb/static/templates/lecturers.html
+++ b/staraweb/static/templates/lecturers.html
@@ -3,22 +3,18 @@
         <table class="table table-hover">
             <caption>Nauczyciele</caption>
             <thead>
-            <th>Imie</th>
-            <th>Nazwisko</th>
-            <th>User Id</th>
-            <th>Id</th>
+                <th>Imię</th>
+                <th>Nazwisko</th>
+                <th>User Id</th>
             </thead>
             <tbody>
-
             {{#data}}
             <tr>
                 <td>{{first_name}}</td>
                 <td>{{last_name}}</td>
                 <td>{{user_id}}</td>
-                <td>{{id}}</td>
             </tr>
             {{/data}}
-
             </tbody>
         </table>
     </div>
