add friends and friendssuggestions to SPA

--- a/staraweb/templates/index.html
+++ b/staraweb/templates/index.html
@@ -38,7 +38,7 @@
                 <li><a href="#user">Użytkownik</a></li>
                 <li class="dropdown">
                       <a class="dropdown-toggle" data-toggle="dropdown" role="button"
-                         aria-haspopup="true" aria-expanded="false">Szkoła <span class="caret"></span></a>
+                         aria-haspopup="true" aria-expanded="false">Szkoła<span class="caret"></span></a>
                       <ul class="dropdown-menu">
                           <li><a href="#courses">Przedmioty</a></li>
                           <li><a href="#grades">Oceny</a></li>
@@ -46,7 +46,15 @@
                           <li><a href="#programmes">Programy</a></li>
                           <li><a href="#lecturers">Nauczyciele</a></li>
                       </ul>
-                  </li>
+                </li>
+                <li class="dropdown">
+                      <a class="dropdown-toggle" data-toggle="dropdown" role="button"
+                         aria-haspopup="true" aria-expanded="false">Znajomi<span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                          <li><a href="#friends">Znajomi</a></li>
+                          <li><a href="#friendssuggestions">Szukaj znajomych</a></li>
+                      </ul>
+                </li>
                 {% end %}
                 {% if not USOS_PAIRED %}
                 <li><a href="#register">Zarejestruj w USOS</a></li>
