cleanup in user

--- a/staraweb/static/templates/friends.html
+++ b/staraweb/static/templates/friends.html
@@ -13,6 +13,9 @@
                 <td>{{first_name}}</td>
                 <td>{{last_name}}</td>
                 <td>{{user_id}}</td>
+                <td>
+                    <button class="btn btn-primary" onclick="friends_remove({{user_id}});">Usuń</button>
+                </td>
             </tr>
             {{/data}}
             </tbody>
