--- a/staraweb/static/templates/friendssuggestions.html
+++ b/staraweb/static/templates/friendssuggestions.html
@@ -15,6 +15,9 @@
                 <td>{{last_name}}</td>
                 <td>{{user_id}}</td>
                 <td>{{count}}</td>
+                <td>
+                    <button class="btn btn-primary" onclick="friends_add({{user_id}});">Dodaj</button>
+                </td>
             </tr>
             {{/data}}
             </tbody>
