--- a/staraweb/static/templates/user.html
+++ b/staraweb/static/templates/user.html
@@ -6,12 +6,10 @@
             <th></th><th></th>
             </thead>
             <tbody>
-                <tr><td>Imie</td><td>{{family_name}}</td></tr>
-                <tr><td>Nazwisko</td><td>{{name}} {{given_name}}</td></tr>
-                <tr><td>locale</td><td>{{locale}}</td></tr>
-                <tr><td>Email</td><td>{{email}}</td></tr>
-                <tr><td>Data utworzenia</td><td>{{user_creation}}</td></tr>
-                <tr><td></td><td><img src="{{picture}}" class="img-responsive" alt="Responsive image"></td></tr>
+                <tr><td>Imię i Nazwisko</td><td>{{name}} {{given_name}}</td><td><img src="{{picture}}" class="img-responsive" alt="Responsive image"></td></tr>
+                <tr><td>Konto</td><td>{{user_type}}</td><td></td></tr>
+                <tr><td>Email</td><td>{{email}}</td><td></td></tr>
+                <tr><td>Data utworzenia</td><td>{{user_creation}}</td><td></td></tr>
             </tbody>
         </table>
 
@@ -22,15 +20,14 @@
             </thead>
             <tbody>
                 <tr><td>USOS</td><td>{{usos_id}}</td></tr>
-                <tr><td>Typ użytkownika</td><td>{{user_type}}</td></tr>
-                <tr><td>Login USOS</td><td>{{first_name}} {{last_name}}</td></tr>
+                <tr><td>Imię i Nazwisko</td><td>{{first_name}} {{last_name}}</td></tr>
                 <tr><td>Status studenta</td><td>{{student_status}}</td></tr>
                 <tr><td>Numer studenta</td><td>{{student_number}}</td></tr>
                 <tr><td>Email</td><td>{{user_email}}</td></tr>
 
                 <tr><td>Programy</td><td></td></tr>
                 {{#student_programmes}}
-                    <tr><td>{{id}}</td><td>{{programme.description.pl}}</td></tr>
+                    <tr><td>{{id}}</td><td>{{programme.description}} ({{programme.id}}) </td></tr>
                 {{/student_programmes}}
             </tbody>
         </table>
