--- a/staraweb/static/templates/courses.html
+++ b/staraweb/static/templates/courses.html
@@ -21,6 +21,8 @@
                 {{/groups}}
                 </table>
                 </td>
+                <td><button class="btn btn-primary" href="#course">Opis</button></td>
+                <td><button class="btn btn-primary" href="#grade">Oceny</button></td>
             </tr>
             {{/data}}
             </tbody>
