--- a/staraweb/static/templates/friends.html
+++ b/staraweb/static/templates/friends.html
@@ -14,7 +14,7 @@
                 <td>{{last_name}}</td>
                 <td>{{user_id}}</td>
                 <td>
-                    <button class="btn btn-primary" onclick="friends_remove({{user_id}});">Usuń</button>
+                    <button class="btn btn-primary btn-danger" onclick="friends_remove({{user_id}});">Usuń</button>
                 </td>
             </tr>
             {{/data}}
