--- a/staraweb/static/templates/friendssuggestions.html
+++ b/staraweb/static/templates/friendssuggestions.html
@@ -3,16 +3,14 @@
         <table class="table table-hover">
             <caption>Szukaj znajomych</caption>
             <thead>
-                <th>Imię</th>
-                <th>Nazwisko</th>
+                <th>Imię i Nazwisko</th>
                 <th>User Id</th>
                 <th>Ilość wspólnych zajęć</th>
             </thead>
             <tbody>
             {{#data}}
             <tr>
-                <td>{{first_name}}</td>
-                <td>{{last_name}}</td>
+                <td><a href="#user#{{user_id}}">{{first_name}} {{last_name}}</a></td>
                 <td>{{user_id}}</td>
                 <td>{{count}}</td>
                 <td>
