--- a/staraweb/templates/index.html
+++ b/staraweb/templates/index.html
@@ -38,6 +38,14 @@
                 <li><a href="#user">Użytkownik</a></li>
                 <li class="dropdown">
                       <a class="dropdown-toggle" data-toggle="dropdown" role="button"
+                         aria-haspopup="true" aria-expanded="false">Plan zajęć<span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                          <li><a href="#friends">zobacz plan</a></li>
+                          <li><a href="#friendssuggestions">Szukaj znajomych</a></li>
+                      </ul>
+                </li>
+                <li class="dropdown">
+                      <a class="dropdown-toggle" data-toggle="dropdown" role="button"
                          aria-haspopup="true" aria-expanded="false">Szkoła<span class="caret"></span></a>
                       <ul class="dropdown-menu">
                           <li><a href="#courses">Przedmioty</a></li>
@@ -47,14 +55,14 @@
                           <li><a href="#lecturers">Nauczyciele</a></li>
                       </ul>
                 </li>
-                <li class="dropdown">
-                      <a class="dropdown-toggle" data-toggle="dropdown" role="button"
-                         aria-haspopup="true" aria-expanded="false">Znajomi<span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                          <li><a href="#friends">Znajomi</a></li>
-                          <li><a href="#friendssuggestions">Szukaj znajomych</a></li>
-                      </ul>
-                </li>
+                <!--<li class="dropdown">-->
+                      <!--<a class="dropdown-toggle" data-toggle="dropdown" role="button"-->
+                         <!--aria-haspopup="true" aria-expanded="false">Znajomi<span class="caret"></span></a>-->
+                      <!--<ul class="dropdown-menu">-->
+                          <!--<li><a href="#friends">Znajomi</a></li>-->
+                          <!--<li><a href="#friendssuggestions">Szukaj znajomych</a></li>-->
+                      <!--</ul>-->
+                <!--</li>-->
                 {% end %}
                 {% if not USOS_PAIRED %}
                 <li><a href="#register">Zarejestruj w USOS</a></li>
@@ -72,7 +80,6 @@
                         <li><a href="/authentication/google">Przez Google</a></li>
                     </ul>
                     {% end %}
-                <li><a href="#about">About</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
