--- a/staraweb/static/templates/lecturers.html
+++ b/staraweb/static/templates/lecturers.html
@@ -1,21 +1,22 @@
 <div class="panel panel-default">
     <div class="panel-body">
-        <table class="table table-hover">
-            <caption>Nauczyciele</caption>
-            <thead>
-                <th>Imię</th>
-                <th>Nazwisko</th>
-                <th>User Id</th>
-            </thead>
-            <tbody>
+        <div class="panel-group" id="accordionLecturers" role="tablist" aria-multiselectable="true">
             {{#data}}
-            <tr>
-                <td>{{first_name}}</td>
-                <td>{{last_name}}</td>
-                <td>{{user_id}}</td>
-            </tr>
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="heading{{user_id}}" lecturer-id="{{user_id}}">
+                    <h4 class="panel-title">
+                        <a role="button" data-toggle="collapse" data-parent="#accordionLecturers" href="#collapse{{user_id}}"
+                           aria-expanded="false" aria-controls="collapse{{user_id}}">
+                            {{first_name}} {{last_name}}
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapse{{user_id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{user_id}}">
+                    <div class="panel-body" id="lecturerDetails{{user_id}}">
+                    </div>
+                </div>
+            </div>
             {{/data}}
-            </tbody>
-        </table>
+        </div>
     </div>
 </div>
