--- a/staraweb/static/templates/lecturer_details.html
+++ b/staraweb/static/templates/lecturer_details.html
@@ -3,24 +3,24 @@
     <th></th><th></th>
     </thead>
     <tbody>
-        <tr><td>Imię i Nazwisko</td><td>{{first_name}} {{last_name}}</td></tr>
+        <tr><td>Tytuł</td><td>{{titles.before}}</td></tr>
+        <tr><td>Imię i Nazwisko</td><td>{{first_name}} {{last_name}} (id: {{id}} ) </td></tr>
         <tr><td>Status pracownika</td><td>{{staff_status}}</td></tr>
-        <tr><td>Strona domowa</td><td>{{homepage_url}}</td></tr>
+        <tr><td>Godziny przyjęć</td><td>{{office_hours.pl}}</td></tr>
+        <tr><td>Pokój</td><td>{{room.building_id}} - {{room.building_name.pl}}</td></tr>
+        <tr><td>Strona domowa</td><td><a href="{{homepage_url}}">{{homepage_url}}</a></td></tr>
+
+        <tr><td>Zainteresowania</td><td>{{interests.pl}}</td></tr>
+
+        <tr><td>Zatrudnienie</td><td></td></tr>
+        {{#employment_positions}}
+        <tr><td></td><td>{{position.name.pl}}</td></tr>
+        {{/employment_positions}}
 
         <tr><td>Prowadzone przedmioty</td><td></td></tr>
         {{#course_editions_conducted}}
         <tr><td></td><td>{{course_name.pl}} {{term_id}} {{lecturers.user_id}} {{lecturers.id}} {{course_id}}</td></tr>
         {{/course_editions_conducted}}
 
-        <tr><td>Zainteresowania</td><td>{{interests.pl}}</td></tr>
-
-        <tr><td>Zatrudnienie</td><td></td></tr>
-        {{#employment_positions}}
-        <tr><td></td><td>{{position.id}} {{position.name.pl}}</td></tr>
-        {{/employment_positions}}
-
-        <tr><td>Pokój</td><td>{{room.building_id}} {{room.building_name.pl}}</td></tr>
-        <tr><td>Numer oraz Id</td><td>{{number}} {{id}}</td></tr>
-        <tr><td>Godziny przyjęć</td><td>{{office_hours.pl}}</td></tr>
     </tbody>
 </table>
