--- a/staraweb/static/templates/lecturers.html
+++ b/staraweb/static/templates/lecturers.html
@@ -4,12 +4,12 @@
             {{#data}}
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="heading{{user_id}}" lecturer-id="{{user_id}}">
-                    <h4 class="panel-title">
+                    <h3 class="panel-title">
                         <a role="button" data-toggle="collapse" data-parent="#accordionLecturers" href="#collapse{{user_id}}"
                            aria-expanded="false" aria-controls="collapse{{user_id}}">
-                            {{first_name}} {{last_name}}
+                            {{last_name}} {{first_name}}
                         </a>
-                    </h4>
+                    </h3>
                 </div>
                 <div id="collapse{{user_id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{user_id}}">
                     <div class="panel-body" id="lecturerDetails{{user_id}}">
