--- a/staraweb/templates/index.html
+++ b/staraweb/templates/index.html
@@ -36,14 +36,7 @@
                 {% if current_user %}
                 {% if USOS_PAIRED %}
                 <li><a href="#user">Użytkownik</a></li>
-                <li class="dropdown">
-                      <a class="dropdown-toggle" data-toggle="dropdown" role="button"
-                         aria-haspopup="true" aria-expanded="false">Plan zajęć<span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                          <li><a href="#friends">zobacz plan</a></li>
-                          <li><a href="#friendssuggestions">Szukaj znajomych</a></li>
-                      </ul>
-                </li>
+                <li><a href="#tt">Plan zajęć</a></li>
                 <li class="dropdown">
                       <a class="dropdown-toggle" data-toggle="dropdown" role="button"
                          aria-haspopup="true" aria-expanded="false">Szkoła<span class="caret"></span></a>
