--- a/staraweb/static/templates/course_details.html
+++ b/staraweb/static/templates/course_details.html
@@ -1,4 +1,4 @@
-<table class="table table-hover">
+<table class="table table-hover table-responsive">
 <tbody>
   <tr><td>Nazwa</td><td>{{name}}</td></tr>
   <tr><td>Język</td><td>{{lang_id}}</td></tr>
