--- a/staraweb/static/templates/friendssuggestions.html
+++ b/staraweb/static/templates/friendssuggestions.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-body">
-        <table class="table table-hover">
+        <table class="table table-hover table-responsive">
             <caption>Szukaj znajomych</caption>
             <thead>
                 <th>Imię i Nazwisko</th>
