--- a/staraweb/static/templates/friends.html
+++ b/staraweb/static/templates/friends.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-body">
-        <table class="table table-hover">
+        <table class="table table-hover table-responsive">
             <caption>Znajomi</caption>
             <thead>
                 <th>Imię</th>
