--- a/staraweb/static/templates/grades.html
+++ b/staraweb/static/templates/grades.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-body">
-        <table class="table table-hover">
+        <table class="table table-hover table-responsive">
             <caption>Oceny</caption>
             <thead>
             <th>Semestr</th>
