--- a/staraweb/static/templates/user.html
+++ b/staraweb/static/templates/user.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-body">
-        <table class="table table-hover">
+        <table class="table table-hover table-responsive">
             <caption>Informacje o użytkowniku</caption>
             <thead>
             <th></th><th></th>
@@ -13,7 +13,7 @@
             </tbody>
         </table>
 
-        <table class="table table-hover">
+        <table class="table table-hover table-responsive">
             <caption>Informacje z USOS</caption>
             <thead>
             <th></th><th></th>
