courses and lecures redraw

--- a/staraweb/static/templates/programmes.html
+++ b/staraweb/static/templates/programmes.html
@@ -8,10 +8,9 @@
             <th>Numer</th>
             <th>Poziom</th>
             <th>Tryb</th>
-            <th>Czas trwania</th>
+            <th>Długość</th>
             </thead>
             <tbody>
-
             {{#data}}
             <tr>
                 <td>{{id}}</td>
@@ -22,7 +21,6 @@
                 <td>{{programme.duration.pl}}</td>
             </tr>
             {{/data}}
-
             </tbody>
         </table>
     </div>
