--- a/staraweb/static/templates/courses.html
+++ b/staraweb/static/templates/courses.html
@@ -1,15 +1,24 @@
 <div class="panel panel-default">
     <div class="panel-body">
+        <caption>Moje przedmioty</caption>
         <div class="panel-group" id="accordionCourses" role="tablist" aria-multiselectable="true">
             {{#data}}
-            <div class="panel panel-default">
+            <div class="panel panel-table">
                 <div class="panel-heading" role="tab" id="heading{{course_id}}" course-id="{{course_id}}">
-                    <h3 class="panel-title">
-                        <a role="button" data-toggle="collapse" data-parent="#accordionCourses" href="#collapse{{course_id}}"
-                           aria-expanded="false" aria-controls="collapse{{course_id}}">
-                            {{course_name}} ({{course_id}}), {{term_id}}
-                        </a>
-                    </h3>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <a role="button" data-toggle="collapse" data-parent="#accordionCourses" href="#collapse{{course_id}}"
+                               aria-expanded="false" aria-controls="collapse{{course_id}}">
+                                {{course_name}}
+                            </a>
+                        </div>
+                        <div class="col-md-2">
+                         ({{course_id}})
+                        </div>
+                        <div class="col-md-2">
+                        {{term_id}}
+                        </div>
+                    </div>
                 </div>
                 <div id="collapse{{course_id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{course_id}}">
                     <div class="panel-body" id="courseDetails{{course_id}}">
