--- a/staraweb/static/templates/lecturers.html
+++ b/staraweb/static/templates/lecturers.html
@@ -1,15 +1,17 @@
 <div class="panel panel-default">
     <div class="panel-body">
+        <caption>Moi nauczyciele</caption>
         <div class="panel-group" id="accordionLecturers" role="tablist" aria-multiselectable="true">
             {{#data}}
-            <div class="panel panel-default">
+            <div class="panel panel-table">
                 <div class="panel-heading" role="tab" id="heading{{user_id}}" lecturer-id="{{user_id}}">
-                    <h3 class="panel-title">
-                        <a role="button" data-toggle="collapse" data-parent="#accordionLecturers" href="#collapse{{user_id}}"
-                           aria-expanded="false" aria-controls="collapse{{user_id}}">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <a role="button" data-toggle="collapse" data-parent="#accordionLecturers" href="#collapse{{user_id}}" aria-expanded="false" aria-controls="collapse{{user_id}}">
                             {{last_name}} {{first_name}}
-                        </a>
-                    </h3>
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div id="collapse{{user_id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{user_id}}">
                     <div class="panel-body" id="lecturerDetails{{user_id}}">
