--- a/staraweb/static/templates/courses.html
+++ b/staraweb/static/templates/courses.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-body">
-        <caption>Moje przedmioty</caption>
+        <caption>Przedmioty</caption>
         <div class="panel-group" id="accordionCourses" role="tablist" aria-multiselectable="true">
             {{#data}}
             <div class="panel panel-table">
