--- a/staraweb/static/templates/terms.html
+++ b/staraweb/static/templates/terms.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <table class="table table-hover table-responsive">
-            <caption>Nauczyciele</caption>
+            <caption>Semestry</caption>
             <thead>
             <th>Nazwa</th>
             <th>Numer</th>
