nl2br handlebar and fixes in crowler

--- a/staraweb/static/templates/course_details.html
+++ b/staraweb/static/templates/course_details.html
@@ -3,8 +3,8 @@
   <tr><td>Język</td><td>{{lang_id}}</td></tr>
   <tr><td>Jednostka</td><td>{{fac_id.name}}, {{fac_id.postal_address}}, tel.: {{fac_id.phone_numbers}}</td></tr>
   <tr><td>Czy jest prowadzony</td><td>{{is_currently_conducted}}</td></tr>
-  <tr><td>Opis</td><td>{{description}}</td></tr>
-  <tr><td>Bibliografia</td><td>{{bibliography}}</td></tr>
-  <tr><td>Kryteria oceny</td><td>{{assessment_criteria}}</td></tr>
+  <tr><td>Opis</td><td>{{nl2br description}}</td></tr>
+  <tr><td>Bibliografia</td><td>{{nl2br bibliography}}</td></tr>
+  <tr><td>Kryteria oceny</td><td>{{nl2br assessment_criteria}}</td></tr>
 </tbody>
 </table>
