--- a/staraweb/templates/index.html
+++ b/staraweb/templates/index.html
@@ -13,10 +13,10 @@
     <link rel="shortcut icon" href="{{ static_url('favicon.ico') }}">
 
     <script type="text/javascript" src="{{ static_url('require.config.js') }}"></script>
-    <!-- konfiguracja require -->
+    <!-- BEGIN require -->
     <script type="text/javascript" data-main="{{ static_url('js/startup.js') }}"
             src="{{ static_url('bower_components/requirejs/require.js') }}"></script>
-    <!-- zaladowanie require.js i glownego skryptu -->
+    <!-- END require.js -->
 </head>
 
 <body>
