--- a/staraweb/static/templates/home.html
+++ b/staraweb/static/templates/home.html
@@ -2,6 +2,6 @@
 
 <div class="panel panel-default">
   <div class="panel-body">
-    Hello, {{hello}}!
+    Hello page after login, {{hello}}!
   </div>
 </div>
