remove column description

--- a/staraweb/static/templates/lecturers.html
+++ b/staraweb/static/templates/lecturers.html
@@ -5,7 +5,7 @@
             <div class="panel panel-table">
                 <div class="panel-heading">
                     <div class="row">
-                        <div class="col-md-6"><b>Nazwisko i imię</b></div>
+                        <div class="col-md-6"><b></b></div>
                     </div>
                 </div>
             </div>
