--- a/staraweb/static/templates/lecturer_details.html
+++ b/staraweb/static/templates/lecturer_details.html
@@ -1,4 +1,4 @@
-<table class="table table-hover table-responsive">
+<table class="table table-strip table-responsive">
     <tbody>
         <tr><td>Tytuł</td><td>{{titles.before}}</td></tr>
         <tr><td>Status pracownika</td><td>{{staff_status}}</td></tr>
