--- a/staraweb/static/templates/error.html
+++ b/staraweb/static/templates/error.html
@@ -1,9 +1,7 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <div class="alert alert-warning fade in" role="alert">
-            <strong>Holy guacamole!</strong>
-            <br>
-            {{message}}
+            <strong>Upss! </strong>{{message}}
         </div>
     </div>
 </div>
