--- a/staraweb/static/templates/programmes.html
+++ b/staraweb/static/templates/programmes.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <table class="table table-hover table-responsive">
-            <caption>Programy nauczania</caption>
+            <caption>Kierunki nauczania</caption>
             <thead>
             <th>Id</th>
             <th>Nazwa</th>
