--- a/staraweb/static/templates/user.html
+++ b/staraweb/static/templates/user.html
@@ -25,7 +25,7 @@
                 <tr><td>Numer studenta</td><td>{{student_number}}</td></tr>
                 <tr><td>Email</td><td>{{user_email}}</td></tr>
 
-                <tr><td>Programy</td><td></td></tr>
+                <tr><td>Kierunki</td><td></td></tr>
                 {{#student_programmes}}
                     <tr><td>{{id}}</td><td>{{programme.description}} ({{programme.id}}) </td></tr>
                 {{/student_programmes}}
