--- a/staraweb/templates/index.html
+++ b/staraweb/templates/index.html
@@ -46,7 +46,7 @@
                           <li><a href="#courses">Przedmioty</a></li>
                           <li><a href="#grades">Oceny</a></li>
                           <li><a href="#terms">Semestry</a></li>
-                          <li><a href="#programmes">Programy</a></li>
+                          <li><a href="#programmes">Kierunki</a></li>
                           <li><a href="#lecturers">Nauczyciele</a></li>
                       </ul>
                 </li>
