--- a/staraweb/templates/index.html
+++ b/staraweb/templates/index.html
@@ -63,6 +63,7 @@
                        aria-haspopup="true" aria-expanded="false">Zaloguj <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/authentication/google">Przez Google</a></li>
+                        <li><a href="/authentication/facebook">Przez Facebook</a></li>
                     </ul>
                     {% end %}
             </ul>
