--- a/staraweb/static/templates/user.html
+++ b/staraweb/static/templates/user.html
@@ -9,7 +9,7 @@
                 <tr><td>Imię i Nazwisko</td><td>{{name}} {{given_name}}</td><td><img src="{{picture}}" class="img-responsive" alt="Responsive image"></td></tr>
                 <tr><td>Konto</td><td>{{user_type}}</td><td></td></tr>
                 <tr><td>Email</td><td>{{email}}</td><td></td></tr>
-                <tr><td>Data utworzenia</td><td>{{user_creation}}</td><td></td></tr>
+                <tr><td>Data utworzenia</td><td>{{user_created}}</td><td></td></tr>
             </tbody>
         </table>
 
