--- a/staraweb/static/templates/register.html
+++ b/staraweb/static/templates/register.html
@@ -15,6 +15,7 @@
         {{/data}}
     </div>
 
+    <div>
     <p class="panel-body" class="col-md-12 brd">
         <p class="text-center">Akceptuję regulamin i Wyrażam zgodę na przetwarzanie moich danych
                 osobowych przez {{PROJECT_TITLE}} w celach związanych z funkcjonowaniem serwisu
