--- a/staraweb/static/templates/lecturer_details.html
+++ b/staraweb/static/templates/lecturer_details.html
@@ -5,18 +5,14 @@
         <tr><td>Godziny przyjęć</td><td>{{office_hours.pl}}</td></tr>
         <tr><td>Pokój</td><td>{{room.building_id}} - {{room.building_name.pl}}</td></tr>
         <tr><td>Strona domowa</td><td><a href="{{homepage_url}}">{{homepage_url}}</a></td></tr>
-
         <tr><td>Zainteresowania</td><td>{{interests.pl}}</td></tr>
-
         <tr><td>Zatrudnienie</td><td></td></tr>
         {{#employment_positions}}
-        <tr><td></td><td>{{position.name.pl}}</td></tr>
+        <tr><td></td><td>{{position.name.pl}} w {{faculty.name.pl}}</td></tr>
         {{/employment_positions}}
-
         <tr><td>Prowadzone przedmioty</td><td></td></tr>
         {{#course_editions_conducted}}
         <tr><td></td><td>{{course_name.pl}} {{term_id}} {{lecturers.user_id}} {{lecturers.id}} {{course_id}}</td></tr>
         {{/course_editions_conducted}}
-
     </tbody>
 </table>
