--- a/staraweb/static/templates/lecturers.html
+++ b/staraweb/static/templates/lecturers.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-body">
-        <caption>Nauczyciele</caption>
+        <caption>Moi nauczyciele</caption>
         <div class="panel-group" id="accordionLecturers" role="tablist" aria-multiselectable="true">
             <div class="panel panel-table">
                 <div class="panel-heading">
