--- a/staraweb/static/templates/user.html
+++ b/staraweb/static/templates/user.html
@@ -19,12 +19,15 @@
             <th></th><th></th>
             </thead>
             <tbody>
-                <tr><td>USOS</td><td>{{usos_id}}</td></tr>
-                <tr><td>Imię i Nazwisko</td><td>{{first_name}} {{last_name}}</td></tr>
+                <tr><td>USOS</td><td>{{usos_name}}</td></tr>
+                <tr><td>Imię i Nazwisko</td><td>{{first_name}} {{last_name}}</td>
+                    <td>{{#if has_photo}}<img src="{{photo}}">{{/if}}</td>
+                </tr>
                 <tr><td>Status studenta</td><td>{{student_status}}</td></tr>
-                <tr><td>Numer studenta</td><td>{{student_number}}</td></tr>
+                <tr><td>Numer indeksu</td><td>{{student_number}}</td></tr>
+                {{#if user_email}}
                 <tr><td>Email</td><td>{{user_email}}</td></tr>
-
+                {{/if}}
                 <tr><td>Kierunki</td><td></td></tr>
                 {{#student_programmes}}
                     <tr><td>{{id}}</td><td>{{programme.description}} ({{programme.id}}) </td></tr>
