--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -14,19 +14,21 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 {{#if USER_LOGGED}}
-                <li><a href="#user">Użytkownik</a></li>
-                <li><a href="#tt">Plan zajęć</a></li>
-                <li class="dropdown">
-                      <a class="dropdown-toggle" data-toggle="dropdown" role="button"
-                         aria-haspopup="true" aria-expanded="false">Szkoła<span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                          <li><a href="#courses">Przedmioty</a></li>
-                          <li><a href="#grades">Oceny</a></li>
-                          <li><a href="#terms">Semestry</a></li>
-                          <li><a href="#programmes">Kierunki</a></li>
-                          <li><a href="#lecturers">Nauczyciele</a></li>
-                      </ul>
-                </li>
+                    {{#if USOS_PAIRED}}
+                    <li><a href="#user">Użytkownik</a></li>
+                    <li><a href="#tt">Plan zajęć</a></li>
+                    <li class="dropdown">
+                          <a class="dropdown-toggle" data-toggle="dropdown" role="button"
+                             aria-haspopup="true" aria-expanded="false">Szkoła<span class="caret"></span></a>
+                          <ul class="dropdown-menu">
+                              <li><a href="#courses">Przedmioty</a></li>
+                              <li><a href="#grades">Oceny</a></li>
+                              <li><a href="#terms">Semestry</a></li>
+                              <li><a href="#programmes">Kierunki</a></li>
+                              <li><a href="#lecturers">Nauczyciele</a></li>
+                          </ul>
+                    </li>
+                    {{/if}}
                 {{/if}}
 
                 {{#if USOS_PAIRED}}
