login page and login redirection

--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -44,7 +44,7 @@
                 {{#if USER_LOGGED }}
                 <li><a href="/authentication/logout">Wyloguj</a></li>
                 {{else}}
-                <li class="dropdown">
+                <li class="dropdown" href="#login">
                     <a href="/authentication/login" class="dropdown-toggle" data-toggle="dropdown" role="button"
                        aria-haspopup="true" aria-expanded="false">Zaloguj <span class="caret"></span></a>
                     <ul class="dropdown-menu">
