first TT calendar component

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -12,6 +12,8 @@
     <link href="{{ static_url('css/main.css') }}" rel="stylesheet">
     <link rel="shortcut icon" href="{{ static_url('favicon.ico') }}">
 
+    <link rel="stylesheet" href="{{ static_url('bower_components/fullcalendar/dist/fullcalendar.min.css') }}" />
+
     <script type="text/javascript" src="{{ static_url('require.config.js') }}"></script>
     <script type="text/javascript" data-main="{{ static_url('js/startup.js') }}"
             src="{{ static_url('bower_components/requirejs/require.js') }}"></script>
