--- a/web/static/templates/tt.html
+++ b/web/static/templates/tt.html
@@ -1,12 +1,1 @@
-<table class="cal-week-box" style="width:100%">
-<thead><tr>
-<% _.each(days_name, function(name) { %>
-<td class="&lt;%= cal._getDayClass('week', start) %&gt;" data-toggle="tooltip" title="&lt;%= cal._getHolidayName(start) %&gt;"><%= name %>
-
-<small><%= start.getDate() %> <%= cal.locale['ms' + start.getMonth()] %></small>
-</td>
-<% start.setDate(start.getDate() + 1); %>
-<% }) %>
-</tr></thead>
-<tbody><tr><%= cal._week() %></tr></tbody>
-</table>
+<div id='calendar'></div>
