--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -8,6 +8,7 @@
 
     <link href="{{ static_url('bower_components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ static_url('bower_components/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
+    <link href="{{ static_url('bower_components/qtip/jquery.qtip.min.css') }}" rel="stylesheet">
 
     <link href="{{ static_url('css/main.css') }}" rel="stylesheet">
     <link rel="shortcut icon" href="{{ static_url('favicon.ico') }}">
